...
           contentDescription = null,
           tint = if (!isFavorite) Color.Black else Color.Red,
           modifier = Modifier
               .padding(16.dp)
               .align(Alignment.TopEnd)
               .size(24.dp)
               .testTag("fav_button")
               .clickable { onFavoriteIconClicked(id, !isFavorite) }
       )
   }
}

@Preview(showBackground = true)
...
