...
        },
        elevation = 0.dp,
        actions = {
            IconButton(
                onClick = moveToAboutPage,
                modifier = Modifier
                    .testTag("about_page")
            ) {
                Icon(
                    imageVector = Icons.Rounded.Person,
                    contentDescription = "about_page"
                )
            }
...
